Troubleshooting bg video issue on iPhone.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,12 +46,10 @@ header article h2 {
 	position: fixed;
 	right: 0; 
 	bottom: 0;
-	/*min-width: 100%; */
+	min-width: 100%; 
 	min-height: 100vh;
-	/*width: auto;*/
-	/*height: auto;*/
-	width: 100%;
-	height: 100%;
+	width: auto;
+	height: auto;
 	z-index: -100;
 
 	/*  Background fallback in case of IE8 & down, or in case video doens't load, such as with slower connections  */
